--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "build C64 VICE",
             "type": "shell",
-            "command": "bin/acme -f cbm -l build/lables -o build/main.prg main.asm && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/lables build/main.prg 2> /dev/null",
+            "command": "bin/acme -f cbm -l build/lables -o build/main.prg code/main.asm && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/lables build/main.prg 2> /dev/null",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -19,11 +19,7 @@
         {
             "label": "build C64 Pucrunch VICE",
             "type": "shell",
-            "command": "bin/acme -f cbm -l build/lables -o build/main.prg main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/lables build/main.prg 2> /dev/null",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "command": "bin/acme -f cbm -l build/lables -o build/main.prg code/main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/lables build/main.prg 2> /dev/null",
             "presentation": {
                 "clear": true
             },
@@ -32,11 +28,7 @@
         {
             "label": "build C16 VICE",
             "type": "shell",
-            "command": "bin/acme -f cbm -l build/lables -o build/main.prg main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/xplus4.app/Contents/MacOS/xplus4 -moncommands build/lables build/main.prg 2> /dev/null",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "command": "bin/acme -f cbm -l build/lables -o build/main.prg code/main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/xplus4.app/Contents/MacOS/xplus4 -moncommands build/lables build/main.prg 2> /dev/null",
             "presentation": {
                 "clear": true
             },
