tasks.json update

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,7 @@
             "label": "build C64 Pucrunch VICE",
             "type": "shell",
             "command": "bin/acme -f cbm -l build/lables -o build/main.prg code/main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/lables build/main.prg 2> /dev/null",
+            "kind": "build",
             "presentation": {
                 "clear": true
             },
@@ -29,6 +30,7 @@
             "label": "build C16 VICE",
             "type": "shell",
             "command": "bin/acme -f cbm -l build/lables -o build/main.prg code/main.asm && bin/pucrunch build/main.prg build/main.prg && /Applications/Vice/xplus4.app/Contents/MacOS/xplus4 -moncommands build/lables build/main.prg 2> /dev/null",
+            "kind": "build",
             "presentation": {
                 "clear": true
             },
