Add a problemMatcher for C64/VICE target
Make VSCode understand the error messages coming from ACME.

With this you can step through errors with F8 in the editor.

Update README.md for the above.

Didn't touch the C16 part.

Also deleted build/main.prg because it feels like it shouldn't be in
git.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,16 @@
             "presentation": {
                 "clear": true
             },
-            "problemMatcher": []
+            "problemMatcher": {
+                "owner": "acme",
+                "fileLocation": ["relative", "${workspaceFolder}"],
+                "pattern": {
+                    "regexp": "^(Error - File\\s+(.*), line (\\d+) (\\(Zone .*\\))?:\\s+(.*))$",
+                    "file": 2,
+                    "location": 3,
+                    "message": 1
+                }
+            }
         },
         {
             "label": "build C64 Pucrunch VICE",
@@ -40,7 +49,16 @@
             "presentation": {
                 "clear": true
             },
-            "problemMatcher": []
+            "problemMatcher": {
+                "owner": "acme",
+                "fileLocation": ["relative", "${workspaceFolder}"],
+                "pattern": {
+                    "regexp": "^(Error - File\\s+(.*), line (\\d+) (\\(Zone .*\\))?:\\s+(.*))$",
+                    "file": 2,
+                    "location": 3,
+                    "message": 1
+                }
+            }
         },
         {
             "label": "build C16 VICE",
