added labels and a documentet example program

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build C64 VICE",
+            "label": "build -> C64 -> VICE",
             "type": "shell",
             "osx": {
                 "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/labels build/main.prg 2> /dev/null",
@@ -34,7 +34,7 @@
             }
         },
         {
-            "label": "build C64 Pucrunch VICE",
+            "label": "build -> C64 -> Pucrunch -> VICE",
             "type": "shell",
             "osx": {
                 "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && bin/mac/pucrunch build/main.prg build/main.prg && /Applications/Vice/x64.app/Contents/MacOS/x64 -moncommands build/labels build/main.prg 2> /dev/null",
@@ -61,7 +61,7 @@
             }
         },
         {
-            "label": "build C16 VICE",
+            "label": "build -> C16 -> VICE",
             "type": "shell",
             "osx": {
                 "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && /Applications/Vice/xplus4.app/Contents/MacOS/xplus4 -moncommands build/labels build/main.prg 2> /dev/null",
@@ -76,7 +76,49 @@
             "presentation": {
                 "clear": true
             },
-            "problemMatcher": []
+            "problemMatcher": {
+                "owner": "acme",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}"
+                ],
+                "pattern": {
+                    "regexp": "^(Error - File\\s+(.*), line (\\d+) (\\(Zone .*\\))?:\\s+(.*))$",
+                    "file": 2,
+                    "location": 3,
+                    "message": 1
+                }
+            }
+        },
+        {
+            "label": "build -> C128 -> VICE",
+            "type": "shell",
+            "osx": {
+                "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && /Applications/Vice/x128.app/Contents/MacOS/x128 -moncommands build/labels build/main.prg 2> /dev/null",
+            },
+            "windows": {
+                "command": "bin\\win\\acme -f cbm -l build/labels -o build/main.prg code/main.asm && C:/tools/vice/xplus4.exe -moncommands build/labels build/main.prg"
+            },
+            "linux": {
+                "command": "bin/linux/acme -f cbm -l build/labels -o build/main.prg code/main.asm && xplus4 -moncommands build/labels build/main.prg 2> /dev/null"
+            },
+            "group": "build",
+            "presentation": {
+                "clear": true
+            },
+            "problemMatcher": {
+                "owner": "acme",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}"
+                ],
+                "pattern": {
+                    "regexp": "^(Error - File\\s+(.*), line (\\d+) (\\(Zone .*\\))?:\\s+(.*))$",
+                    "file": 2,
+                    "location": 3,
+                    "message": 1
+                }
+            }
         }
     ]
 }
