--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -97,10 +97,40 @@
                 "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && /Applications/Vice/x128.app/Contents/MacOS/x128 -moncommands build/labels build/main.prg 2> /dev/null",
             },
             "windows": {
-                "command": "bin\\win\\acme -f cbm -l build/labels -o build/main.prg code/main.asm && C:/tools/vice/xplus4.exe -moncommands build/labels build/main.prg"
+                "command": "bin\\win\\acme -f cbm -l build/labels -o build/main.prg code/main.asm && C:/tools/vice/x128.exe -moncommands build/labels build/main.prg"
             },
             "linux": {
-                "command": "bin/linux/acme -f cbm -l build/labels -o build/main.prg code/main.asm && xplus4 -moncommands build/labels build/main.prg 2> /dev/null"
+                "command": "bin/linux/acme -f cbm -l build/labels -o build/main.prg code/main.asm && x128 -moncommands build/labels build/main.prg 2> /dev/null"
+            },
+            "group": "build",
+            "presentation": {
+                "clear": true
+            },
+            "problemMatcher": {
+                "owner": "acme",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}"
+                ],
+                "pattern": {
+                    "regexp": "^(Error - File\\s+(.*), line (\\d+) (\\(Zone .*\\))?:\\s+(.*))$",
+                    "file": 2,
+                    "location": 3,
+                    "message": 1
+                }
+            }
+        },
+        {
+            "label": "build -> VC20 -> VICE",
+            "type": "shell",
+            "osx": {
+                "command": "bin/mac/acme -f cbm -l build/labels -o build/main.prg code/main.asm && /Applications/Vice/xvic.app/Contents/MacOS/xvic -moncommands build/labels build/main.prg 2> /dev/null",
+            },
+            "windows": {
+                "command": "bin\\win\\acme -f cbm -l build/labels -o build/main.prg code/main.asm && C:/tools/vice/xvic.exe -moncommands build/labels build/main.prg"
+            },
+            "linux": {
+                "command": "bin/linux/acme -f cbm -l build/labels -o build/main.prg code/main.asm && xvic -moncommands build/labels build/main.prg 2> /dev/null"
             },
             "group": "build",
             "presentation": {
